force-app/main/default/objects/Account/fields/Created_by_Another_Org_del__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Another_Org_del__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created by Another Org</label>
    <type>Checkbox</type>
</CustomField>