force-app/main/default/objects/Account/fields/Custom_Namec__c.field-meta.xml
<CustomField>
    <fullName>Custom_Namec__c</fullName>
    <label>Custom Namec</label>
    <length>80</length>
    <type>Text</type>
</CustomField>