force-app/main/default/objects/Account/fields/Last_Contact__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>