force-app/main/default/objects/Account/fields/Total_Opportunities_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Opportunities_Amount__c</fullName>
    <label>Total Opportunities Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>